create rtsp node based on gst

--- a/components/ros2-rtsp/docker/src/rtsp/setup.cfg
+++ b/components/ros2-rtsp/docker/src/rtsp/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script-dir=$base/lib/rtsp
+script_dir=$base/lib/rtsp
 [install]
-install-scripts=$base/lib/rtsp
+install_scripts=$base/lib/rtsp
