--- a/components/upcreate3-object-detection/docker/yolov8n_openvino_model/metadata.yaml
+++ b/components/upcreate3-object-detection/docker/yolov8n_openvino_model/metadata.yaml
@@ -1,13 +1,14 @@
 description: Ultralytics YOLOv8n model trained on coco.yaml
 author: Ultralytics
-license: AGPL-3.0 https://ultralytics.com/license
-date: '2024-09-12T11:46:21.276821'
-version: 8.0.196
+date: '2024-09-22T13:48:26.251691'
+version: 8.2.98
+license: AGPL-3.0 License (https://ultralytics.com/license)
+docs: https://docs.ultralytics.com
 stride: 32
 task: detect
 batch: 1
 imgsz:
-- 640
+- 480
 - 640
 names:
   0: person
